<resources>

    <!--GOOGLE MAPS API KEY -->
    <string name="api_key">AIzaSyAoV91Z45IXiCqJP_fAqW5AvLT8bvWVV4A</string>


    <string name="app_name">AndroidProjekat</string>
    <string name="title_activity_posts">PostsActivity</string>
    <string name="login">Login</string>
    <string name="createPost">Create Post</string>
    <string name="readPost">Read Post</string>
    <string name="settings">Settings</string>
    <string name="homePage">Home Page</string>
    <string name="user_name">username</string>
    <string name="password">password</string>
    <string name="notifications">Notifications</string>
    <string name="filter">Filter</string>
    <string name="sortPostsBy">Sort Posts By</string>
    <string name="sortCommentsBy">Sort Comments By</string>
    <string name="showPostsFrom">Show Posts From</string>
    <string name="enterNewAdminName">Enter new admin name:</string>
    <string name="title">Title</string>
    <string name="what_do_you_wanna_share">What do you wanna share?</string>
    <string name="photo">Photo</string>
    <string name="gallery">Gallery</string>
    <string name="title_activity_read_post">ReadPostActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="post">post</string>
    <string name="comments">comments</string>
    <string name="Post">Post</string>
    <string name="postTitle">Post Title</string>
    <string name="location">Location</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur nibh nibh, bibendum ut fringilla ac, tempus vel mi. Donec dapibus quam eget egestas rutrum.</string>
    <string name="logout">LOGOUT</string>
    <string name="create_post">Create Post</string>
    <string name="confirm">Confirm</string>
    <string name="comment">Comment</string>
    <string name="delete">delete</string>
    <string name="details">Details</string>
    <string name="delete1">Delete</string>


</resources>
