<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginRight="14dp"
    android:layout_marginLeft="14dp"
    android:orientation="vertical"
    tools:context="com.example.alowishusad.androidprojekat.PostsActivity">

    <Button
        android:id="@+id/btnCreatePost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createPost"
        android:onClick="btnCreatePost"/>

    <Button
        android:id="@+id/btnReadPost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/readPost"
        android:onClick="btnReadPost"/>

    <Button
        android:id="@+id/btnSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:onClick="btnSettings"/>
</LinearLayout>
