<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/postTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/postTitle"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:textSize="20dp"
        android:textColor="@color/colorPrimaryDark"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/postTitle"
        android:text="@string/location"
        android:textSize="16dp"
        android:textStyle="italic"
        android:id="@+id/textView" />

    <TextView
        android:id="@+id/postAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/postTitle"
        android:layout_alignParentRight="true"
        android:layout_marginRight="90dp"
        android:text="Author"
        android:textSize="16dp"
        android:textStyle="italic"
        />

    <TextView
        android:id="@+id/postDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/postAuthor"
        android:layout_alignParentEnd="true"
        android:text="25-Mar-2018"
        android:textStyle="italic"
        />

    <ImageView
        android:id="@+id/postPhoto"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:layout_marginTop="5dp"
        android:src="@drawable/bora" />

    <TextView
        android:id="@+id/postDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/postPhoto"
        android:layout_marginTop="5dp"
        android:text="@string/lorem"/>


</RelativeLayout>